--- a/app/views/HonestyDeclarationPage.scala.html
+++ b/app/views/HonestyDeclarationPage.scala.html
@@ -76,7 +76,7 @@
                 @if(appealType.contains(PenaltyTypeEnum.Late_Payment.toString) || appealType.contains(PenaltyTypeEnum.Additional.toString)) {
                     @messages("honestyDeclaration.obligation.lpp.li.2", friendlyStartDate, friendlyEndDate)
                 } else {
-                    @if(userRequest.isAgent && userRequest.session.get(SessionKeys.whatCausedYouToMissTheDeadline).contains("agent")){
+                    @if(userRequest.isAgent){
                     @messages("agent.honestyDeclaration.obligation.li.2", friendlyStartDate, friendlyEndDate)
                     } else {
                     @messages("honestyDeclaration.obligation.li.2", friendlyStartDate, friendlyEndDate)
