[PRM-1091] - Changed 'Your details' to 'Appeal details'

--- a/app/views/CheckYourAnswersPage.scala.html
+++ b/app/views/CheckYourAnswersPage.scala.html
@@ -27,7 +27,7 @@
 @layout(pageTitle = messages("checkYourAnswers.title"),
     isPageFullWidth = false) {
     <h1 class="govuk-heading-l">@messages("checkYourAnswers.heading")</h1>
-    <h2 class="govuk-heading-m" id="your-details">@messages("checkYourAnswers.yourDetails.h2")</h2>
+    <h2 class="govuk-heading-m" id="appeal-details">@messages("checkYourAnswers.appealDetails.h2")</h2>
 
     <dl class="govuk-summary-list">
         @contentToDisplayInSummaryList.map { keyValue =>
