--- a/app/views/components/inputDate.scala.html
+++ b/app/views/components/inputDate.scala.html
@@ -45,21 +45,21 @@
     items = Seq(
         InputItem(
             id = s"$id.day",
-            classes = s"govuk-input--width-2${if(form("day").hasErrors || form.errors.exists(_.args.contains("day"))) " govuk-input--error" else ""}",
+            classes = s"govuk-input--width-2${if(form(s"$id.day").hasErrors || form.errors.exists(_.args.contains("day")) || form.errors.exists(_.args.size > 1)) " govuk-input--error" else ""}",
             name =  s"$id.day",
             label = Some(messages("date.day")),
             value = form(s"$id.day").value
         ),
         InputItem(
             id = s"$id.month",
-            classes = s"govuk-input--width-2${if(form("month").hasErrors || form.errors.exists(_.args.contains("month"))) " govuk-input--error" else ""}",
+            classes = s"govuk-input--width-2${if(form(s"$id.month").hasErrors || form.errors.exists(_.args.contains("month")) || form.errors.exists(_.args.size > 1)) " govuk-input--error" else ""}",
             name = s"$id.month",
             label = Some(messages("date.month")),
             value = form(s"$id.month").value
         ),
         InputItem(
             id = s"$id.year",
-            classes = s"govuk-input--width-4${if(form("year").hasErrors || form.errors.exists(_.args.contains("year"))) " govuk-input--error" else ""}",
+            classes = s"govuk-input--width-4${if(form(s"$id.year").hasErrors || form.errors.exists(_.args.contains("year")) || form.errors.exists(_.args.size > 1)) " govuk-input--error" else ""}",
             name = s"$id.year",
             label = Some(messages("date.year")),
             value = form(s"$id.year").value
@@ -67,7 +67,11 @@
     ),
     hint = hintText.map(hint => Hint(content = HtmlContent(messages(hint)))),
     errorMessage = {
-        if(idOfError.contains(id)) form(idOfError).error.fold(form.errors.find(_.key.isEmpty))(err => Some(err)).map(err => ErrorMessage(content = Text(messages(err.message, err.args:_*)))) else None
+        form(id).error
+                .orElse(form(s"$id.day").error)
+                .orElse(form(s"$id.month").error)
+                .orElse(form(s"$id.year").error)
+                .map(err => ErrorMessage(content = Text(messages(err.message, err.args:_*))))
     }
 
 ))
