[PRM-1092] Added and Fixed tests

--- a/app/views/reasonableExcuseJourneys/other/UploadEvidenceQuestionPage.scala.html
+++ b/app/views/reasonableExcuseJourneys/other/UploadEvidenceQuestionPage.scala.html
@@ -33,6 +33,7 @@ formErrors = form.errors) {
 form = form,
 legend = messages("otherReason.uploadEvidence.question.heading"),
 items = radioOptions,
+hint = Some(Html(messages("otherReason.uploadEvidence.question.hintText"))),
 legendAsHeading = true
 )
 
