[PRM-988] - Added notification when file uploaded and removed + added text to span and removed aria-label on progress bar + tests

--- a/app/views/components/upload/uploadList.scala.html
+++ b/app/views/components/upload/uploadList.scala.html
@@ -31,7 +31,7 @@
             <input type="hidden" name="fileReference" value="@fileReference">
             <button type="submit" class="govuk-link remove-link govuk-body" id="remove-button-@fileNumber">
                 @messages("otherReason.uploadEvidence.button.remove")
-                <span class="govuk-visually-hidden">@messages("otherReason.uploadEvidence.document") @fileNumber</span>
+                <span class="govuk-visually-hidden">@messages("otherReason.uploadEvidence.file") @fileNumber</span>
             </button>
         }
     </dd>
