--- a/app/views/components/upload/uploadItem.scala.html
+++ b/app/views/components/upload/uploadItem.scala.html
@@ -17,7 +17,7 @@
 @(acceptedFileExtensions: String)(implicit messages: Messages)
 <li class="multi-file-upload__item">
     <div class="govuk-form-group">
-        <label class="govuk-label" for="file-{fileIndex}">@messages("otherReason.uploadEvidence.document") <span class="multi-file-upload__number">{fileNumber}</span></label>
+        <label class="govuk-label" for="file-{fileIndex}">@messages("otherReason.uploadEvidence.file") <span class="multi-file-upload__number">{fileNumber}</span></label>
         <div class="multi-file-upload__item-content">
             <div class="multi-file-upload__file-container">
                 <input class="multi-file-upload__file govuk-file-upload" type="file" id="file-{fileIndex}" accept="@acceptedFileExtensions">
@@ -27,7 +27,7 @@
             <div class="multi-file-upload__meta-container">
                 <div class="multi-file-upload__status">
                     <span class="multi-file-upload__progress">
-                        <span class="multi-file-upload__progress-bar" aria-live="polite" aria-label="uploading"></span>
+                        <span class="multi-file-upload__progress-bar" role="status"></span>
                     </span>
                     <span class="multi-file-upload__uploaded-tag govuk-tag">@messages("otherReason.uploadEvidence.status.uploaded")</span>
                     <span class="multi-file-upload__waiting-tag govuk-tag govuk-tag--grey">@messages("otherReason.uploadEvidence.status.pending")</span>
@@ -35,7 +35,7 @@
 
                 <button type="button" class="multi-file-upload__remove-item govuk-link">
                     @messages("otherReason.uploadEvidence.button.remove")
-                    <span class="govuk-visually-hidden">@messages("otherReason.uploadEvidence.document") <span class="multi-file-upload__number">{fileNumber}</span></span>
+                    <span class="govuk-visually-hidden">@messages("otherReason.uploadEvidence.file") <span class="multi-file-upload__number">{fileNumber}</span></span>
                 </button>
                 <span class="multi-file-upload__removing">@messages("otherReason.uploadEvidence.button.removing")</span>
             </div>
