--- a/app/views/TimeoutPage.scala.html
+++ b/app/views/TimeoutPage.scala.html
@@ -23,7 +23,7 @@
     showSignOut = false,
     showPenaltyInformation = false,
     backLinkEnabled = false) {
-    <h1 class="govuk-heading-l">@messages("timeout.heading")</h1>
+    <h1 class="govuk-heading-xl">@messages("timeout.heading")</h1>
     <p class="govuk-body">@messages("timeout.p1")</p>
     <a class="govuk-link govuk-button" href="@controllers.routes.AppealStartController.onPageLoad().url">@messages("timeout.signIn")</a>
 }
