[PRM-1094] - Hide files uploaded when the user selects no to uploading files

--- a/app/views/layouts/Layout.scala.html
+++ b/app/views/layouts/Layout.scala.html
@@ -28,7 +28,7 @@
         phaseBanner: components.phaseBanner,
         govukBackLink: GovukBackLink,
         hmrcStandardFooter: HmrcStandardFooter,
-        languageSelect: views.html.LanguageSelect,
+        languageSelect: views.html.LanguageSelect
 )
 @(
     pageTitle: String,
