[PRM-989] Updated trasnferring message to alert

--- a/app/views/reasonableExcuseJourneys/other/UploadEvidencePage.scala.html
+++ b/app/views/reasonableExcuseJourneys/other/UploadEvidencePage.scala.html
@@ -96,7 +96,7 @@
                 <span class="file-upload__spinner ccms-loader"></span>
             </p>
 
-            <div class="multi-file-upload__notifications govuk-visually-hidden" aria-live="polite" role="status"></div>
+            <div class="multi-file-upload__notifications govuk-visually-hidden" aria-live="assertive" role="status"></div>
 
             <script type="text/x-template" id="multi-file-upload-item-tpl">@uploadItem(appConfig.acceptedFileTypes)</script>
             <script type="text/x-template" id="error-manager-summary-tpl">@errorManager.summary(messages)</script>
