--- a/app/views/partials/errorManager/message.scala.html
+++ b/app/views/partials/errorManager/message.scala.html
@@ -15,7 +15,7 @@
  *@
 
 @(implicit messages: Messages)
-<span id="error-message" class="govuk-error-message">
+<span id="error-message-{fileRef}" class="govuk-error-message">
     <span class="govuk-visually-hidden">@messages("error.prefix")</span>
     <span class="multi-file-upload__error-message">{errorMessage}</span>
 </span>
