[PRM-1146] - Refactored logic and created tests

--- a/app/views/HonestyDeclarationPage.scala.html
+++ b/app/views/HonestyDeclarationPage.scala.html
@@ -54,9 +54,7 @@
                     }
                 } else {
                     @if(userRequest.isAgent) {
-                        @if(userRequest.session.get(SessionKeys.whoPlannedToSubmitVATReturn).contains("agent")&& userRequest.session.get(SessionKeys.whatCausedYouToMissTheDeadline).contains("client")) {
-                            @messages("agent.honestyDeclaration.li.1.2.extra", friendlyDueDate)
-                        } else if(userRequest.session.get(SessionKeys.whoPlannedToSubmitVATReturn).contains("agent") ){
+                        @if(userRequest.session.get(SessionKeys.whoPlannedToSubmitVATReturn).contains("agent")){
                             @messages("honestyDeclaration.li.1.2", friendlyDueDate)
                         } else {
                             @if(reasonableExcuse.equals("crime") || reasonableExcuse.equals("bereavement")) {
