[PRM-1153] Removed redundent messages

--- a/app/views/reasonableExcuseJourneys/bereavement/WhenDidThePersonDiePage.scala.html
+++ b/app/views/reasonableExcuseJourneys/bereavement/WhenDidThePersonDiePage.scala.html
@@ -32,7 +32,7 @@ formErrors = form.errors) {
 form = form,
 legendContent = messages("bereavementReason.heading"),
 legendClasses = Some("govuk-fieldset__legend govuk-fieldset__legend--l"),
-hintText = Some(messages("bereavementReason.hintText")),
+hintText = Some(messages("whenDidEventHappen.hint")),
 legendAsPageHeading = true
 )
 
