--- a/app/views/reasonableExcuseJourneys/fireOrFlood/WhenDidFireOrFloodHappenPage.scala.html
+++ b/app/views/reasonableExcuseJourneys/fireOrFlood/WhenDidFireOrFloodHappenPage.scala.html
@@ -34,7 +34,7 @@
             form = form,
             legendContent = messages("fireOrFloodReason.heading"),
             legendClasses = Some("govuk-fieldset__legend govuk-fieldset__legend--l"),
-            hintText = Some(messages("fireOrFloodReason.hintText")),
+            hintText = Some(messages("whenDidEventHappen.hint")),
             legendAsPageHeading = true
         )
 
