--- a/app/views/reasonableExcuseJourneys/health/WhenDidHealthReasonHappenPage.scala.html
+++ b/app/views/reasonableExcuseJourneys/health/WhenDidHealthReasonHappenPage.scala.html
@@ -41,7 +41,7 @@
             form = form,
             legendContent = getMessage("healthReason.whenHealthIssueHappened.heading"),
             legendClasses = Some("govuk-fieldset__legend govuk-fieldset__legend--l"),
-            hintText = Some(getMessage(lppOrLspDynamicText)),
+            hintText = Some(getMessage(lppOrLspDynamicText) + messages("whenDidEventHappen.hint")),
             legendAsPageHeading = true
         )
 
