--- a/app/views/reasonableExcuseJourneys/health/WhenDidHospitalStayBeginPage.scala.html
+++ b/app/views/reasonableExcuseJourneys/health/WhenDidHospitalStayBeginPage.scala.html
@@ -33,7 +33,7 @@
             form = form,
             legendContent = messages("healthReason.whenDidHospitalStayBegin.heading"),
             legendClasses = Some("govuk-fieldset__legend govuk-fieldset__legend--l"),
-            hintText = Some(messages("healthReason.whenDidHospitalStayBegin.hintText")),
+            hintText = Some(messages("whenDidEventHappen.hint")),
             legendAsPageHeading = true
         )
 
