--- a/app/views/reasonableExcuseJourneys/lossOfStaff/WhenDidThePersonLeaveBusinessPage.scala.html
+++ b/app/views/reasonableExcuseJourneys/lossOfStaff/WhenDidThePersonLeaveBusinessPage.scala.html
@@ -33,7 +33,7 @@
             form = form,
             legendContent = messages("lossOfStaffReason.heading"),
             legendClasses = Some("govuk-fieldset__legend govuk-fieldset__legend--l"),
-            hintText = Some(messages("lossOfStaffReason.hintText")),
+            hintText = Some(messages("lossOfStaffReason.hintText") + messages("whenDidEventHappen.hint")),
             legendAsPageHeading = true
         )
 
