--- a/app/views/reasonableExcuseJourneys/other/WhenDidBecomeUnablePage.scala.html
+++ b/app/views/reasonableExcuseJourneys/other/WhenDidBecomeUnablePage.scala.html
@@ -42,7 +42,7 @@
             form = form,
             legendContent = getMessage("otherReason.whenDidBecomeUnable.heading"),
             legendClasses = Some("govuk-fieldset__legend govuk-fieldset__legend--l"),
-            hintText = Some(getMessage(hintText)),
+            hintText = Some(getMessage(hintText) + messages("whenDidEventHappen.hint")),
             legendAsPageHeading = true
         )
 
