--- a/app/views/reasonableExcuseJourneys/technicalIssues/TechnologyIssuesDatePage.scala.html
+++ b/app/views/reasonableExcuseJourneys/technicalIssues/TechnologyIssuesDatePage.scala.html
@@ -33,7 +33,7 @@
             form = form,
             legendContent = messages(s"$messagePrefix.heading"),
             legendClasses = Some("govuk-fieldset__legend govuk-fieldset__legend--l"),
-            hintText = Some(messages(s"$messagePrefix.hintText")),
+            hintText = Some(messages("whenDidEventHappen.hint")),
             legendAsPageHeading = true
         )
 
