--- a/app/views/reasonableExcuseJourneys/crime/WhenDidCrimeHappenPage.scala.html
+++ b/app/views/reasonableExcuseJourneys/crime/WhenDidCrimeHappenPage.scala.html
@@ -34,7 +34,7 @@
             form = form,
             legendContent = messages("crimeReason.heading"),
             legendClasses = Some("govuk-fieldset__legend govuk-fieldset__legend--l"),
-            hintText = Some(messages("crimeReason.hintText")),
+            hintText = Some(messages("whenDidEventHappen.hint")),
             legendAsPageHeading = true
         )
 
