[PRM-1153] Further clean up, including combining duplicate headers and titles

--- a/app/views/AppealConfirmationPage.scala.html
+++ b/app/views/AppealConfirmationPage.scala.html
@@ -26,13 +26,13 @@
     messages(penaltyTypeMsgKey)
 }
 
-@layout(pageTitle = messages("appealConfirmation.title"),
+@layout(pageTitle = messages("appealConfirmation.headingAndTitle"),
     isPageFullWidth = false,
     showPenaltyInformation = false,
     backLinkEnabled = false) {
 
     <div class="govuk-panel govuk-panel--confirmation">
-        <h1 class="govuk-panel__title">@messages("appealConfirmation.heading")</h1>
+        <h1 class="govuk-panel__title">@messages("appealConfirmation.headingAndTitle")</h1>
         <div class="govuk-panel__body">
             @messages("appealConfirmation.typeAndPeriod", penaltyType, periodStart, periodEnd)
         </div>
