--- a/app/views/AppealStartPage.scala.html
+++ b/app/views/AppealStartPage.scala.html
@@ -42,9 +42,9 @@
     )
 }
 
-@layout(pageTitle = messages("appealStart.title"),
+@layout(pageTitle = messages("service.name"),
         isPageFullWidth = false) {
-    <h1 class="govuk-heading-l">@messages("appealStart.header")</h1>
+    <h1 class="govuk-heading-l">@messages("service.name")</h1>
     <p class="govuk-body">@messages("appealStart.p1")</p>
     @bullets(
         Seq(
