--- a/app/views/errors/Unauthorised.scala.html
+++ b/app/views/errors/Unauthorised.scala.html
@@ -19,9 +19,9 @@
 @()(implicit request: Request[_], messages: Messages, appConfig: config.AppConfig)
 
 @layout(
-    pageTitle = messages("unauthorised.title")
+    pageTitle = messages("unauthorised.headingAndTitle")
 ) {
-    <h1 class="govuk-heading-xl">@messages("unauthorised.title")</h1>
+    <h1 class="govuk-heading-xl">@messages("unauthorised.headingAndTitle")</h1>
     <p class="govuk-body"> @messages("unauthorised.signUp")</p>
     <p class="govuk-body">@messages("unauthorised.alreadySignedUp")</p>
     <p class="govuk-body"><a class="govuk-link" href="@routes.SignOutController.signOut()">@messages("base.signOut")</a></p>
