--- a/app/views/reasonableExcuseJourneys/other/WhyReturnSubmittedLatePage.scala.html
+++ b/app/views/reasonableExcuseJourneys/other/WhyReturnSubmittedLatePage.scala.html
@@ -29,8 +29,8 @@
 
 @pageTitleAndHeading = @{
     if(appealType.contains(PenaltyTypeEnum.Late_Payment.toString) || appealType.contains(PenaltyTypeEnum.Additional.toString)) {
-        "otherReason.whyReturnSubmittedLate.lpp.title"
-    } else "otherReason.whyReturnSubmittedLate.title"
+        "otherReason.whyReturnSubmittedLate.lpp.headingAndTitle"
+    } else "otherReason.whyReturnSubmittedLate.headingAndTitle"
 }
 
 @layout(pageTitle = messages(pageTitleAndHeading),
