--- a/app/views/CheckYourAnswersPage.scala.html
+++ b/app/views/CheckYourAnswersPage.scala.html
@@ -24,9 +24,9 @@
 
 @(contentToDisplayInSummaryList: Seq[(String, String, String)])(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
-@layout(pageTitle = messages("checkYourAnswers.title"),
+@layout(pageTitle = messages("checkYourAnswers.headingAndTitle"),
     isPageFullWidth = false) {
-    <h1 class="govuk-heading-l">@messages("checkYourAnswers.heading")</h1>
+    <h1 class="govuk-heading-l">@messages("checkYourAnswers.headingAndTitle")</h1>
     <h2 class="govuk-heading-m" id="appeal-details">@messages("checkYourAnswers.appealDetails.h2")</h2>
 
     <dl class="govuk-summary-list">
