--- a/app/views/agents/WhoPlannedToSubmitVATReturnAgentPage.scala.html
+++ b/app/views/agents/WhoPlannedToSubmitVATReturnAgentPage.scala.html
@@ -21,14 +21,14 @@
 
 @(form: Form[_], radioOptions: Seq[RadioItem], postAction: Call)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
-@layout(pageTitle = messages("agents.whoPlannedToSubmitVATReturn.title"),
+@layout(pageTitle = messages("agents.whoPlannedToSubmitVATReturn.headingAndTitle"),
     isPageFullWidth = false,
     formHasErrors = form.errors.nonEmpty,
     formErrors = form.errors){
     @formHelper(action = postAction) {
         @radios(
             form = form,
-            legend = messages("agents.whoPlannedToSubmitVATReturn.heading"),
+            legend = messages("agents.whoPlannedToSubmitVATReturn.headingAndTitle"),
             items = radioOptions,
             legendAsHeading = true
         )
