--- a/app/views/components/errorSummary.scala.html
+++ b/app/views/components/errorSummary.scala.html
@@ -30,7 +30,7 @@
   }) { errorLinks =>
    @govukErrorSummary(ErrorSummary(
     errorList = errorLinks,
-    title = Text(messages("error.summary.title"))
+    title = Text(messages("error.summary.headingAndTitle"))
    ))
   }
  }
