--- a/app/views/errors/ServiceUnavailablePage.scala.html
+++ b/app/views/errors/ServiceUnavailablePage.scala.html
@@ -19,10 +19,10 @@
 @()(implicit request: Request[_], messages: Messages, appConfig: config.AppConfig)
 
 @layout(
-    pageTitle = messages("serviceUnavailable.title"),
+    pageTitle = messages("serviceUnavailable.headingAndTitle"),
     showPenaltyInformation = false
 ) {
-    <h1 class="govuk-heading-l">@messages("serviceUnavailable.heading")</h1>
+    <h1 class="govuk-heading-l">@messages("serviceUnavailable.headingAndTitle")</h1>
     <p class="govuk-body"> @messages("serviceUnavailable.p1")</p>
     <p class="govuk-body"> @messages("serviceUnavailable.p2")</p>
     <p class="govuk-body"> @messages("serviceUnavailable.p3")</p>
