--- a/app/views/reasonableExcuseJourneys/bereavement/WhenDidThePersonDiePage.scala.html
+++ b/app/views/reasonableExcuseJourneys/bereavement/WhenDidThePersonDiePage.scala.html
@@ -22,7 +22,7 @@ dateInput: components.inputDate)
 
 @(form: Form[_], postAction: Call)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
-@layout(pageTitle = messages("bereavementReason.title"),
+@layout(pageTitle = messages("bereavementReason.headingAndTitle"),
 isPageFullWidth = false,
 formHasErrors = form.errors.nonEmpty,
 formErrors = form.errors) {
@@ -30,7 +30,7 @@ formErrors = form.errors) {
 
 @dateInput(
 form = form,
-legendContent = messages("bereavementReason.heading"),
+legendContent = messages("bereavementReason.headingAndTitle"),
 legendClasses = Some("govuk-fieldset__legend govuk-fieldset__legend--l"),
 hintText = Some(messages("whenDidEventHappen.hint")),
 legendAsPageHeading = true
