--- a/app/views/reasonableExcuseJourneys/crime/HasCrimeBeenReportedToPolicePage.scala.html
+++ b/app/views/reasonableExcuseJourneys/crime/HasCrimeBeenReportedToPolicePage.scala.html
@@ -24,14 +24,14 @@
 
 @(form: Form[_], radioOptions: Seq[RadioItem], postAction: Call)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
-@layout(pageTitle = messages("crimeReason.hasBeenReported.title"),
+@layout(pageTitle = messages("crimeReason.hasBeenReported.headingAndTitle"),
     isPageFullWidth = false,
     formHasErrors = form.errors.nonEmpty,
     formErrors = form.errors) {
     @formHelper(action = postAction) {
         @radios(
             form = form,
-            legend = messages("crimeReason.hasBeenReported.heading"),
+            legend = messages("crimeReason.hasBeenReported.headingAndTitle"),
             items = radioOptions,
             legendAsHeading = true
         )
