--- a/app/views/reasonableExcuseJourneys/fireOrFlood/WhenDidFireOrFloodHappenPage.scala.html
+++ b/app/views/reasonableExcuseJourneys/fireOrFlood/WhenDidFireOrFloodHappenPage.scala.html
@@ -24,7 +24,7 @@
 
 @(form: Form[_], postAction: Call)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
-@layout(pageTitle = messages("fireOrFloodReason.title"),
+@layout(pageTitle = messages("fireOrFloodReason.headingAndTitle"),
     isPageFullWidth = false,
     formHasErrors = form.errors.nonEmpty,
     formErrors = form.errors) {
@@ -32,7 +32,7 @@
 
         @dateInput(
             form = form,
-            legendContent = messages("fireOrFloodReason.heading"),
+            legendContent = messages("fireOrFloodReason.headingAndTitle"),
             legendClasses = Some("govuk-fieldset__legend govuk-fieldset__legend--l"),
             hintText = Some(messages("whenDidEventHappen.hint")),
             legendAsPageHeading = true
