--- a/app/views/reasonableExcuseJourneys/health/HasTheHospitalStayEndedPage.scala.html
+++ b/app/views/reasonableExcuseJourneys/health/HasTheHospitalStayEndedPage.scala.html
@@ -23,14 +23,14 @@
 
 @(form: Form[_], radioOptions: Seq[RadioItem], postAction: Call)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
-@layout(pageTitle = messages("healthReason.hasTheHospitalStayEnded.title"),
+@layout(pageTitle = messages("healthReason.hasTheHospitalStayEnded.headingAndTitle"),
     isPageFullWidth = false,
     formHasErrors = form.errors.nonEmpty,
     formErrors = form.errors){
     @formHelper(action = postAction) {
         @radios(
             form = form,
-            legend = messages("healthReason.hasTheHospitalStayEnded.heading"),
+            legend = messages("healthReason.hasTheHospitalStayEnded.headingAndTitle"),
             items = radioOptions,
             legendAsHeading = true,
             formFieldId = "hasStayEnded"
