--- a/app/views/reasonableExcuseJourneys/health/WasHospitalStayRequiredPage.scala.html
+++ b/app/views/reasonableExcuseJourneys/health/WasHospitalStayRequiredPage.scala.html
@@ -23,14 +23,14 @@
 
 @(form: Form[_], radioOptions: Seq[RadioItem], postAction: Call)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
-@layout(pageTitle = messages("healthReason.wasHospitalStayRequired.title"),
+@layout(pageTitle = messages("healthReason.wasHospitalStayRequired.headingAndTitle"),
     isPageFullWidth = false,
     formHasErrors = form.errors.nonEmpty,
     formErrors = form.errors) {
     @formHelper(action = postAction) {
         @radios(
             form = form,
-            legend = messages("healthReason.wasHospitalStayRequired.heading"),
+            legend = messages("healthReason.wasHospitalStayRequired.headingAndTitle"),
             items = radioOptions,
             legendAsHeading = true
         )
