--- a/app/views/reasonableExcuseJourneys/lossOfStaff/WhenDidThePersonLeaveBusinessPage.scala.html
+++ b/app/views/reasonableExcuseJourneys/lossOfStaff/WhenDidThePersonLeaveBusinessPage.scala.html
@@ -24,14 +24,14 @@
 
 @(form: Form[_], postAction: Call)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
-@layout(pageTitle = messages("lossOfStaffReason.title"),
+@layout(pageTitle = messages("lossOfStaffReason.headingAndTitle"),
     isPageFullWidth = false,
     formHasErrors = form.errors.nonEmpty,
     formErrors = form.errors) {
     @formHelper(action = postAction) {
         @dateInput(
             form = form,
-            legendContent = messages("lossOfStaffReason.heading"),
+            legendContent = messages("lossOfStaffReason.headingAndTitle"),
             legendClasses = Some("govuk-fieldset__legend govuk-fieldset__legend--l"),
             hintText = Some(messages("lossOfStaffReason.hintText") + messages("whenDidEventHappen.hint")),
             legendAsPageHeading = true
