--- a/app/views/reasonableExcuseJourneys/other/UploadEvidenceQuestionPage.scala.html
+++ b/app/views/reasonableExcuseJourneys/other/UploadEvidenceQuestionPage.scala.html
@@ -24,14 +24,14 @@
 
 @(form: Form[_], radioOptions: Seq[RadioItem], postAction: Call)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
-@layout(pageTitle = messages("otherReason.uploadEvidence.question.title"),
+@layout(pageTitle = messages("otherReason.uploadEvidence.question.headingAndTitle"),
         isPageFullWidth = false,
         formHasErrors = form.errors.nonEmpty,
         formErrors = form.errors) {
         @formHelper(action = postAction) {
               @radios(
               form = form,
-              legend = messages("otherReason.uploadEvidence.question.heading"),
+              legend = messages("otherReason.uploadEvidence.question.headingAndTitle"),
               items = radioOptions,
               hint = Some(Html(messages("otherReason.uploadEvidence.question.hintText"))),
               legendAsHeading = true
