--- a/app/views/reasonableExcuseJourneys/other/noJs/UploadAnotherDocumentPage.scala.html
+++ b/app/views/reasonableExcuseJourneys/other/noJs/UploadAnotherDocumentPage.scala.html
@@ -44,11 +44,11 @@
         @p(Html(messages("otherReason.uploadEvidence.details.p3")))
 }
 
-@layout(pageTitle = messages("otherReason.uploadAnotherDocument.noJs.title"),
+@layout(pageTitle = messages("otherReason.uploadAnotherDocument.noJs.headingAndTitle"),
         isPageFullWidth = false,
         formHasErrors = form.errors.nonEmpty,
         formErrors = form.errors){
-        <h1 class="govuk-heading-l">@messages("otherReason.uploadAnotherDocument.noJs.heading")</h1>
+        <h1 class="govuk-heading-l">@messages("otherReason.uploadAnotherDocument.noJs.headingAndTitle")</h1>
         <p class="govuk-body">@messages("otherReason.uploadEvidence.p4")</p>
         <p class="govuk-body">@messages("otherReason.uploadEvidence.p5")</p>
         @details("otherReason.uploadEvidence.details.heading", detailsContent)
@@ -61,7 +61,7 @@
                         @fileUploadDialog(form, isAddingAnotherDocument = true)
                 </div>
                 <span>
-                        @govukButton(Button(content = Text(messages("otherReason.uploadAnotherDocument.noJs.button.uploadFile"))))
+                        @govukButton(Button(content = Text(messages("otherReason.uploadEvidence.noJs.button.uploadFile"))))
                         <a href="@fileListPage" class="govuk-button govuk-button--secondary">@messages("otherReason.uploadAnotherDocument.noJs.button.cancel")</a>
                 </span>
         </form>
