--- a/app/views/reasonableExcuseJourneys/technicalIssues/TechnologyIssuesDatePage.scala.html
+++ b/app/views/reasonableExcuseJourneys/technicalIssues/TechnologyIssuesDatePage.scala.html
@@ -24,14 +24,14 @@
 
 @(form: Form[_], postAction: Call, messagePrefix: String)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
-@layout(pageTitle = messages(s"$messagePrefix.title"),
+@layout(pageTitle = messages(s"$messagePrefix.headingAndTitle"),
     isPageFullWidth = false,
     formHasErrors = form.errors.nonEmpty,
     formErrors = form.errors) {
     @formHelper(action = postAction) {
         @dateInput(
             form = form,
-            legendContent = messages(s"$messagePrefix.heading"),
+            legendContent = messages(s"$messagePrefix.headingAndTitle"),
             legendClasses = Some("govuk-fieldset__legend govuk-fieldset__legend--l"),
             hintText = Some(messages("whenDidEventHappen.hint")),
             legendAsPageHeading = true
